[package]
name = "sandbox"
version = "0.1.0"
authors = ["changhui lee <iam@xo.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
nix = "0.21.0"
seccomp-sys = "0.1.3"

[features]
